Home page displays list of classes that the student is enrolled in